# eVtol_Simulation_Problem

./: CMakeLists.txt  CMakePresets.json  README.md  aircraft_stats.txt  log.txt  main.cpp  process_data.py
Reports/: eVTOL_Simulation_Tests.xml
config/: companies.json
includes/: Aircraft.h  ChargeRequest.h  Charger.h  Logger.h  MpmcQueue.h  constants.h
sources/: Aircraft.cpp  Charger.cpp
tests/: TestAircraft.cpp  TestCharger.cpp  UnitTestsMain.cpp
